# benchmarking

./: .gitignore  Dockerfile  README.md  README.txt  analysis_sample.py  basic_test.yaml  benchmark.ipynb  check_benchmark_ecs.py  cluster.yaml  ecs_task.json  pyproject.toml  remote_kerchunk_zip.json  submit-job.sh
.github/workflows/: build.yml
