[project]
name = "analysis"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "dask==2025.11.0",
    "fsspec==2025.10.0",
    "geopandas==1.1.1",
    "psutil==7.1.3",
    "pystac-client==0.9.0",
    "requests==2.32.5",
    "s3fs>=2025.10.0",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "shapely==2.1.2",
    "xarray==2025.10.1",
    "xstac==1.2.0",
    "zarr==3.1.3",
]
